--- a/src/assets/pages/Paguser/usuario.css
+++ b/src/assets/pages/Paguser/usuario.css
@@ -118,6 +118,7 @@
   padding: 20px;
   margin-right: 300px;
   min-height: calc(100vh - 60px);
+  max-width: calc(100vw - 540px);
 }
 
 @media screen and (max-width: 1024px) {
