--- a/src/components/right-sidebar/PainelPerfil.css
+++ b/src/components/right-sidebar/PainelPerfil.css
@@ -8,8 +8,9 @@
   position: fixed;
   right: 0;
   top: 60px;
-  overflow-y: auto;
   z-index: 10;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 1024px) {
